cmake_minimum_required(VERSION 3.16)
project(RayStratocaster)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")

add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)

add_executable(RayStratocaster ./src/Raycast.cpp)

target_link_libraries(RayStratocaster PRIVATE SDL3::SDL3)